--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
       - RabbitMq__Host=rabbitmq
-      - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=110101;Database=auctions
+      - ConnectionStrings__DefaultConnection=Host=host.docker.internal;Port=5432;User Id=postgres;Password=110101;Database=auctions
       - IdentityServiceUrl=http://identity-svc
     ports:
       - 7001:80
@@ -61,7 +61,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=110101;Database=identitydb
+      - ConnectionStrings__DefaultConnection=Host=host.docker.internal;Port=5432;User Id=postgres;Password=110101;Database=identitydb
     ports:
       - 5000:80
     depends_on:
