--- a/frontend/webapp/package.json
+++ b/frontend/webapp/package.json
@@ -22,13 +22,17 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/react-datepicker": "^4.15.0"
   }
 }
