--- a/src/AuctionService/appsettings.json
+++ b/src/AuctionService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=localhost:5432;User Id=postgres;Password=110101;Database=auctions"
+  },
   "AllowedHosts": "*"
 }
