--- a/src/BiddingService/Properties/launchSettings.json
+++ b/src/BiddingService/Properties/launchSettings.json
@@ -5,9 +5,9 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
+      "applicationUrl": "http://localhost:7003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    }
-  }
+    } }
 }
