--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,9 @@
+networks:
+  custom:
+    ipam:
+      config:
+        - subnet: 10.5.0.0/16
+
 services:
   postgres:
     image: postgres
@@ -7,6 +13,8 @@ services:
       - 5432:5432
     volumes:
       - /var/lib/postgresql/data
+    networks:
+      custom:
   mongodb:
     image: mongo
     environment:
@@ -16,11 +24,15 @@ services:
       - 27017:27017
     volumes:
       - /var/lib/mongodb/data
+    networks:
+      custom:
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
       - 5672:5672
       - 15672:15672
+    networks:
+      custom:
   auction-svc:
     image: dionupton/auction-svc:latest
     build:
@@ -43,6 +55,8 @@ services:
     depends_on:
       - postgres
       - rabbitmq
+    networks:
+      custom:
   search-svc:
     image: dionupton/search-svc:latest
     build:
@@ -59,6 +73,8 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
+    networks:
+      custom:
   identity-svc:
     image: dionupton/identity-svc:latest
     build:
@@ -69,9 +85,13 @@ services:
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Host=host.docker.internal;Port=5432;User Id=postgres;Password=110101;Database=identitydb
     ports:
+      - 80:80
       - 5000:80
     depends_on:
       - postgres
+    networks:
+      custom:
+         ipv4_address: 10.5.0.200
   gateway-svc:
     image: dionupton/gateway-svc:latest
     build:
@@ -82,6 +102,8 @@ services:
       - ASPNETCORE_URLS=http://+:80
     ports:
       - 6001:80
+    networks:
+      custom:
   bid-svc:
     image: dionupton/bid-svc:latest
     build:
@@ -98,7 +120,9 @@ services:
       - 7003:80
     depends_on:
       - mongodb
-      - rabbitmq    
+      - rabbitmq 
+    networks:
+      custom:   
   notify-svc:
     image: dionupton/notify-svc:latest
     build:
@@ -111,4 +135,26 @@ services:
     ports:
       - 7004:80
     depends_on:
-      - rabbitmq    
+      - rabbitmq 
+    networks:
+      custom:
+  webapp:
+    image: dionupton/webapp
+    build:
+      context: .
+      dockerfile: frontend/webapp/dockerfile
+    volumes:
+      - /var/lib/web/data
+    ports:
+      - 3000:3000
+    extra_hosts:
+      - id.flogit.com:10.5.0.200
+    environment:
+      - NEXTAUTH_SECRET=somethingreallysecret
+      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_URL_INTERNAL=http://webapp:3000
+      - API_URL=http://gateway-svc/
+      - ID_URL=http://id.flogit.com
+      - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications 
+    networks:
+      custom: 
