--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -13,5 +13,6 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=110101;Database=identitydb"
-  }
+  },
+  "ClientApp": "http://localhost:3000"
 }
