--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,9 +84,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Host=host.docker.internal;Port=5432;User Id=postgres;Password=110101;Database=identitydb
-    ports:
-      - 80:80
-      - 5000:80
+      - VIRTUAL_HOST=id.flogit.com
+      - ClientApp=http://app.flogit.com
     depends_on:
       - postgres
     networks:
@@ -100,8 +99,8 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
-    ports:
-      - 6001:80
+      - ClientApp=http://app.flogit.com
+      - VIRTUAL_HOST=api.flogit.com
     networks:
       custom:
   bid-svc:
@@ -145,16 +144,29 @@ services:
       dockerfile: frontend/webapp/dockerfile
     volumes:
       - /var/lib/web/data
-    ports:
-      - 3000:3000
     extra_hosts:
       - id.flogit.com:10.5.0.200
     environment:
       - NEXTAUTH_SECRET=somethingreallysecret
-      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_URL=http://app.flogit.com
       - NEXTAUTH_URL_INTERNAL=http://webapp:3000
       - API_URL=http://gateway-svc/
       - ID_URL=http://id.flogit.com
       - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications 
+      - VIRTUAL_HOST=app.flogit.com
+      - VIRTUAL_PORT=3000
     networks:
       custom: 
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
+    ports:
+      - 80:80
+    networks:
+      custom:
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+    depends_on:
+      - webapp
+      - gateway-svc
+      - identity-svc
+    
