--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -161,10 +161,12 @@ services:
     image: nginxproxy/nginx-proxy
     ports:
       - 80:80
+      - 443:443
     networks:
       custom:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./devcerts:/etc/nginx/certs
     depends_on:
       - webapp
       - gateway-svc
