--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Host=host.docker.internal;Port=5432;User Id=postgres;Password=110101;Database=identitydb
       - VIRTUAL_HOST=id.flogit.com
-      - ClientApp=http://app.flogit.com
+      - ClientApp=https://app.flogit.com
     depends_on:
       - postgres
     networks:
@@ -99,7 +99,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
-      - ClientApp=http://app.flogit.com
+      - ClientApp=https://app.flogit.com
       - VIRTUAL_HOST=api.flogit.com
     networks:
       custom:
