--- a/frontend/webapp/package.json
+++ b/frontend/webapp/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
