--- a/infra/K8S/auction-depl.yml
+++ b/infra/K8S/auction-depl.yml
@@ -14,16 +14,25 @@ spec:
       containers:
       - name: auction-svc
         image: dionupton/auction-svc
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         env:
           - name: RabbitMq__Host
             value: rabbit-clusterip
           - name: RabbitMq__Username
-            value: rabbit
+            valueFrom:
+              secretKeyRef:
+                name: auction-secret
+                key: rabbitUn
           - name: RabbitMq__Password
-            value: rabbit
+            valueFrom:
+              secretKeyRef:
+                name: auction-secret
+                key: rabbitPw
           - name: ConnectionStrings__DefaultConnection
-            value: Host=postgres-clusterip;Port=5432;User Id=postgres;Password=110101;Database=auctions
+            valueFrom:
+              secretKeyRef:
+                name: auction-secret
+                key: connString
           - name: IdentityServiceUrl
             value: https://id.flogitdemoapp.co.uk
           - name: Kestrel__Endpoints__Grpc__Protocols
