--- a/infra/K8S/gateway-depl.yml
+++ b/infra/K8S/gateway-depl.yml
@@ -14,7 +14,7 @@ spec:
       containers:
       - name: gateway-svc
         image: dionupton/gateway-svc
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         env:
         - name: ClientApp
           value: https://app.flogit.com
