--- a/infra/K8S/postgres-depl.yml
+++ b/infra/K8S/postgres-depl.yml
@@ -16,7 +16,10 @@ spec:
         image: postgres
         env:
           - name: POSTGRES_PASSWORD
-            value: "110101"
+            valueFrom:
+              secretKeyRef:
+                name: postgres-secret
+                key: password
         ports:
         - containerPort: 5432
         volumeMounts:
@@ -40,16 +43,4 @@ spec:
   - port: 5432
     targetPort: 5432
 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres-lb
-spec:
-  type: LoadBalancer
-  selector:
-    app: postgres
-  ports:
-  - port: 5432
-    targetPort: 5432
 
