--- a/infra/K8S/webapp-depl.yml
+++ b/infra/K8S/webapp-depl.yml
@@ -14,10 +14,13 @@ spec:
       containers:
       - name: webapp
         image: dionupton/webapp
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         env:
           - name: NEXTAUTH_SECRET
-            value: somethingreallysecret
+            valueFrom:
+              secretKeyRef:
+                name: webapp-secret
+                key: authSecret
           - name: NEXTAUTH_URL
             value: https://app.flogit.com
           - name: API_URL
@@ -40,19 +43,4 @@ spec:
   ports:
   - port: 3000
     targetPort: 3000
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: webapp-lb
-spec:
-  type: LoadBalancer
-  selector:
-    app: webapp
-  ports:
-  - port: 3000
-    targetPort: 3000
-
 
