--- a/infra/prod-k8s/ingress-svc.yml
+++ b/infra/prod-k8s/ingress-svc.yml
@@ -6,13 +6,8 @@ metadata:
     name: ingress-svc
 spec:
   ingressClassName: nginx
-  tls:
-    - hosts:
-      - app.flogit.com
-      - api.flogit.com
-      secretName: flogit-app-tls
   rules:
-  - host: app.flogit.com
+  - host: app.flogitdemoapp.co.uk
     http:
       paths:
       - pathType: Prefix
@@ -22,7 +17,7 @@ spec:
             name: webapp-clusterip
             port: 
               number: 3000
-  - host: api.flogit.com
+  - host: api.flogitdemoapp.co.uk
     http:
       paths:
       - pathType: Prefix
