--- a/infra/K8S/webapp-depl.yml
+++ b/infra/K8S/webapp-depl.yml
@@ -21,8 +21,13 @@ spec:
               secretKeyRef:
                 name: webapp-secret
                 key: authSecret
+          - name: CLIENT_SECRET
+            valueFrom:
+              secretKeyRef:
+                name: webapp-secret
+                key: clientSecret
           - name: NEXTAUTH_URL
-            value: https://app.flogit.com
+            value: https://app.flogitdemoapp.co.uk
           - name: API_URL
             value: http://gateway-clusterip/
           - name: ID_URL
