--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -14,5 +14,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=110101;Database=identitydb"
   },
-  "ClientApp": "http://localhost:3000"
+  "ClientApp": "http://localhost:3000",
+  "ClientSecret": "secret"
 }
