--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ "master" ]
     paths:
-      - 'frontend/web-app/**'
+      - 'frontend/webapp/**'
 
 env:
   REGISTRY_IMAGE: dionupton/webapp
